# arc3-runner

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: doc.md
plans/: 2026-06-21-visual-game-interface-and-agent-rerun.md
server/: __init__.py  main.py
tests/: test_runtime.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  demo.ts  styles.css  types.ts
web/src/components/: CompactJson.tsx  EnvironmentStrip.tsx  EventDetail.tsx  FrameHistory.tsx  GameRail.tsx  PixelGrid.tsx  Timeline.tsx  TraceInspector.tsx  VisualGameInterface.tsx
