[project]
name = "arc3-runner"
version = "0.1.0"
description = "Inspectable ARC-AGI-3 official game agent runner"
requires-python = ">=3.12,<3.15"
dependencies = [
  "arc-agi==0.9.9",
  "arcengine==0.9.3",
  "fastapi>=0.115.0",
  "numpy>=2.2.0",
  "pydantic>=2.10.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
